mink-plugin/css/minkui.css
#minkWrapper {margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif;}
#minkuiX {width: 100%; height: 80px; background-color: #eef; margin: 0; top: 0; left: 0; position: fixed; padding: 5px;  z-index:99999 !important; line-height: 1.1em;}
#minkuiX #minkLogo {height: 100%; float: left; z-index: 2; position: relative;}
#minkuiX #minkStatus {width: 100%; position: absolute; bottom: 0; left: 0; margin: 0; padding: 0; background-color: #ccf; z-index: 1; height: 1.2em; border-bottom: 2px solid #aaf; border-top: 1px solid #bbf;}
#minkuiX #minkStatus ul {list-style-type: none; margin: 0; padding: 0; width: 700px;}
#minkuiX #minkStatus li {width: 100px; float: left; text-align: center; vertical-align: middle; padding: 0; margin: 0;}
#minkuiX #minkStatus li#options {position: absolute; right: 0;}
#minkuiX #minkStatus li#options:hover {cursor: pointer;}
#minkuiX #minkStatus li span {border-radius: 10px; padding: 2px 8px 2px 8px; margin: 2px 0px 0px 0px;}
#minkuiX #minkStatus li.active {background-color: white; font-weight: bold; border-radius: 10px;}
#minkuiX #minkStatus li span:hover {cursor: pointer; text-decoration: underline;}
#minkuiX #minkStatus li#stepsTitle span:hover {cursor: default; text-decoration: none;}
#minkuiX #minkStatus li#stepsTitle {width: 200px; text-align: right;}


h1 {font-size: 14px; font-family: 'Futura', 'Century Gothic', AppleGothic, sans-serif;}

#minkuiX .noMementos {display: none;}
.archiveNowInterface {width: 50px; height: 50px; vertical-align: top; position: relative; z-index: 5;}
.hidden {display: none;}
.archiveLogo {opacity: 0.75;}
.archiveLogo:hover {cursor: pointer; opacity: 1.0;}

#archivelogo_ala {margin-left: 1.0em;}


#drilldownBox {border: 1px solid #999; z-index: 3;  padding: 2px; z-index: 1; font-family: Arial, sans-serif; background-color: white;margin-left: 210px; top: 91px; position: absolute;}
#drilldownBox ul {list-style-type: none; width: 100px; float: left;  padding: 0; background-color: white; max-height: 500px; overflow-x: hidden; overflow-y: auto;}
#drilldownBox ul li {list-style-type: none; padding: 0; margin: 0; width: 90px;}
#drilldownBox ul li:hover {background-color: #ddddff; cursor: pointer;}
#drilldownBox ul li.selectedOption {background-color: #ddddff;}
#drilldownBox ul li span.memCount {float: right;  font-family: Monaco, Courier, sans-serif; padding: 0px 3px; margin-right: 5px; border-radius: 2px; font-size: 10px; line-height: 10px;}

